tests/ui/transmutability/structs/repr/transmute_infinitely_recursive_type.stderr
error[E0072]: recursive type `ExplicitlyPadded` has infinite size
  --> $DIR/transmute_infinitely_recursive_type.rs:21:5
   |
LL |     struct ExplicitlyPadded(ExplicitlyPadded);
   |     ^^^^^^^^^^^^^^^^^^^^^^^ ---------------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL |     struct ExplicitlyPadded(Box<ExplicitlyPadded>);
   |                             ++++                +

error[E0391]: cycle detected when computing layout of `should_pad_explicitly_packed_field::ExplicitlyPadded`
   |
   = note: ...which immediately requires computing layout of `should_pad_explicitly_packed_field::ExplicitlyPadded` again
   = note: cycle used when evaluating trait selection obligation `(): core::mem::transmutability::BikeshedIntrinsicFrom<should_pad_explicitly_packed_field::ExplicitlyPadded, core::mem::transmutability::Assume { alignment: false, lifetimes: false, safety: false, validity: false }>`
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0277]: `ExplicitlyPadded` cannot be safely transmuted into `()`
  --> $DIR/transmute_infinitely_recursive_type.rs:24:55
   |
LL |     assert::is_maybe_transmutable::<ExplicitlyPadded, ()>();
   |                                                       ^^ analyzing the transmutability of `ExplicitlyPadded` is not yet supported
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/transmute_infinitely_recursive_type.rs:14:14
   |
LL |     pub fn is_maybe_transmutable<Src, Dst>()
   |            --------------------- required by a bound in this function
LL |     where
LL |         Dst: BikeshedIntrinsicFrom<Src>,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_maybe_transmutable`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0072, E0277, E0391.
For more information about an error, try `rustc --explain E0072`.
